--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -895,7 +895,7 @@ footer .footer-logo-container .footer-title {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: clamp(12px, 1.15vw, 10rem);
+  font-size: clamp(12px, 1vw, 10rem);
   margin: 0;
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
@@ -934,7 +934,7 @@ footer ul li a {
   text-decoration: none;
   color: #FFFFFF;
   font-weight: 300;
-  font-size: clamp(12px, 1.15vw, 10rem);
+  font-size: clamp(12px, 1vw, 10rem);
 }
 footer .footer-nav h2 {
   font-family: "EB Garamond", serif;
@@ -11231,7 +11231,7 @@ html {
 main {
   font-size: clamp(14px, 5vmin, 10%);
   line-height: clamp(26px, 4vh, 10rem);
-  font-size: clamp(12px, 1.15vw, 10rem);
+  font-size: clamp(12px, 1vw, 10rem);
 }
 
 * {
