--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -17,7 +17,7 @@ $font-colour: #383838;
 
 // Font-Sizes
 $font-size-small: clamp(10px, 1vw, 9rem);
-$font-size-normal: clamp(12px, 1.15vw, 10rem);
+$font-size-normal: clamp(12px, 1vw, 10rem);
 $font-size-large: clamp(18px, 1.35vw, 12rem);
 $font-size-heading: clamp(18px, 2.1vw, 15rem);
 
